--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
+      // eslint-disable-next-line no-undef
       tailwind.config = {
         darkMode: "class",
         theme: {
