fix: several changes to update eslint

--- a/src/index.html
+++ b/src/index.html
@@ -13,23 +13,23 @@
     <script>
       // eslint-disable-next-line no-undef
       tailwind.config = {
-        darkMode: "class",
+        darkMode: 'class',
         theme: {
           extend: {
             colors: {
-              turbowarp: "#ff4c4c",
-              darkbg: "#0f0f13",
-              cardbg: "#1b1b23",
-              lightbg: "#f8fafc",
-              lightcard: "#ffffff",
-              border: "#2a2a35",
-              lightborder: "#e2e8f0",
+              turbowarp: '#ff4c4c',
+              darkbg: '#0f0f13',
+              cardbg: '#1b1b23',
+              lightbg: '#f8fafc',
+              lightcard: '#ffffff',
+              border: '#2a2a35',
+              lightborder: '#e2e8f0',
             },
             fontFamily: {
-              sans: ["Inter", "system-ui", "sans-serif"],
+              sans: ['Inter', 'system-ui', 'sans-serif'],
             },
             animation: {
-              "pulse-fast": "pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite",
+              'pulse-fast': 'pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite',
             },
           },
         },
@@ -48,18 +48,14 @@
     <header
       class="border-b border-lightborder dark:border-border bg-white/80 dark:bg-cardbg/50 backdrop-blur-md sticky top-0 z-40 transition-colors"
     >
-      <div
-        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between"
-      >
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
         <div class="flex items-center gap-3">
           <div
             class="w-8 h-8 bg-turbowarp rounded-lg flex items-center justify-center text-white font-bold text-xl shadow-lg shadow-red-500/20"
           >
             <i class="ph ph-lightning"></i>
           </div>
-          <h1
-            class="text-xl font-bold tracking-tight text-slate-800 dark:text-white"
-          >
+          <h1 class="text-xl font-bold tracking-tight text-slate-800 dark:text-white">
             TW Extensions
           </h1>
         </div>
@@ -93,24 +89,16 @@
 
     <main class="flex-grow max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 w-full">
       <div class="text-center mb-12">
-        <h2
-          class="text-4xl md:text-5xl font-bold text-slate-900 dark:text-white mb-4 bg-clip-text"
-        >
+        <h2 class="text-4xl md:text-5xl font-bold text-slate-900 dark:text-white mb-4 bg-clip-text">
           Supercharge your Scratch projects
         </h2>
-        <p
-          class="text-lg text-slate-600 dark:text-gray-300 max-w-2xl mx-auto mb-8"
-        >
+        <p class="text-lg text-slate-600 dark:text-gray-300 max-w-2xl mx-auto mb-8">
           A collection of custom, high-performance extensions for TurboWarp.
         </p>
 
-        <div
-          class="max-w-4xl mx-auto flex flex-col md:flex-row gap-4 relative z-10"
-        >
+        <div class="max-w-4xl mx-auto flex flex-col md:flex-row gap-4 relative z-10">
           <div class="relative flex-grow group">
-            <div
-              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
-            >
+            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
               <i
                 class="ph ph-magnifying-glass text-slate-400 dark:text-gray-500 text-lg group-focus-within:text-turbowarp transition-colors"
               ></i>
@@ -122,9 +110,7 @@
               aria-label="Search extensions"
               class="block w-full pl-10 pr-24 py-3 bg-white dark:bg-cardbg border border-slate-200 dark:border-border rounded-xl text-slate-900 dark:text-white placeholder-slate-400 dark:placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-turbowarp focus:border-transparent transition-all shadow-sm"
             />
-            <div
-              class="absolute inset-y-0 right-10 flex items-center pointer-events-none"
-            >
+            <div class="absolute inset-y-0 right-10 flex items-center pointer-events-none">
               <span
                 class="kbd-shortcut bg-slate-100 dark:bg-darkbg border-slate-300 dark:border-border text-slate-400 dark:text-gray-500 hidden md:block"
                 aria-hidden="true"
@@ -141,12 +127,8 @@
           </div>
 
           <div class="relative w-full md:w-48">
-            <div
-              class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none"
-            >
-              <i
-                class="ph ph-sort-ascending text-slate-400 dark:text-gray-500 text-lg"
-              ></i>
+            <div class="absolute inset-y-0 left-0 pl-3 flex items-center pointer-events-none">
+              <i class="ph ph-sort-ascending text-slate-400 dark:text-gray-500 text-lg"></i>
             </div>
             <select
               id="sortSelect"
@@ -158,9 +140,7 @@
               <option value="newest">New First</option>
               <option value="random">Random</option>
             </select>
-            <div
-              class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none"
-            >
+            <div class="absolute inset-y-0 right-0 pr-3 flex items-center pointer-events-none">
               <i class="ph ph-caret-down text-slate-400 dark:text-gray-500"></i>
             </div>
           </div>
@@ -174,10 +154,7 @@
         ></div>
       </div>
 
-      <div
-        id="extensionGrid"
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"
-      ></div>
+      <div id="extensionGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
 
       <div id="noResults" class="hidden text-center py-12" aria-live="polite">
         <div
@@ -185,12 +162,8 @@
         >
           <i class="ph ph-ghost text-3xl text-slate-400 dark:text-gray-600"></i>
         </div>
-        <h3 class="text-lg font-medium text-slate-900 dark:text-white mb-1">
-          No extensions found
-        </h3>
-        <p class="text-slate-500 dark:text-gray-500">
-          Try adjusting your search or filters.
-        </p>
+        <h3 class="text-lg font-medium text-slate-900 dark:text-white mb-1">No extensions found</h3>
+        <p class="text-slate-500 dark:text-gray-500">Try adjusting your search or filters.</p>
         <button
           id="resetFiltersBtn"
           class="mt-4 text-turbowarp hover:underline text-sm font-medium"
@@ -205,12 +178,10 @@
     >
       <div class="max-w-7xl mx-auto px-4 text-center">
         <p class="text-slate-500 dark:text-gray-500 text-sm">
-          &copy; 2024 TurboWarp Extension Gallery. Not affiliated with Scratch
-          or the Scratch Team.
+          &copy; 2024 TurboWarp Extension Gallery. Not affiliated with Scratch or the Scratch Team.
         </p>
         <p class="text-slate-400 dark:text-gray-600 text-xs mt-2">
-          Created with <i class="ph ph-heart-fill text-turbowarp mx-1"></i> for
-          the community.
+          Created with <i class="ph ph-heart-fill text-turbowarp mx-1"></i> for the community.
         </p>
       </div>
     </footer>
@@ -226,9 +197,7 @@
       <div
         class="modal-content bg-white dark:bg-[#1a1a24] w-full max-w-2xl max-h-[90vh] rounded-2xl shadow-2xl overflow-hidden flex flex-col relative border border-slate-200 dark:border-border"
       >
-        <div
-          class="p-6 border-b border-slate-100 dark:border-border flex items-start gap-4"
-        >
+        <div class="p-6 border-b border-slate-100 dark:border-border flex items-start gap-4">
           <div
             id="modalIconContainer"
             class="w-16 h-16 rounded-xl bg-slate-100 dark:bg-darkbg border border-slate-200 dark:border-border flex-shrink-0 flex items-center justify-center text-3xl overflow-hidden"
@@ -240,9 +209,7 @@
                   id="modalTitle"
                   class="text-2xl font-bold text-slate-900 dark:text-white leading-tight"
                 ></h2>
-                <div
-                  class="flex items-center gap-2 mt-1 text-sm text-slate-500 dark:text-gray-400"
-                >
+                <div class="flex items-center gap-2 mt-1 text-sm text-slate-500 dark:text-gray-400">
                   <span
                     >by
                     <button
