--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="A curated gallery of custom extensions for TurboWarp. Discover utilities, hardware support, media tools, and more."
+      content="A gallery of custom extensions for TurboWarp developed by @kx1bx1. Discover utilities, hardware support, media tools, and more."
     />
-    <title>TurboWarp Extension Gallery</title>
+    <title>kx1bx1 Extension Gallery</title>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -17,7 +17,7 @@
         theme: {
           extend: {
             colors: {
-              turbowarp: '#ff4c4c',
+              turbowarp: '#c64cff',
               darkbg: '#0f0f13',
               cardbg: '#1b1b23',
               lightbg: '#f8fafc',
@@ -56,7 +56,7 @@
             <i class="ph ph-lightning"></i>
           </div>
           <h1 class="text-xl font-bold tracking-tight text-slate-800 dark:text-white">
-            TW Extensions
+            kx1bx1 Extension Gallery
           </h1>
         </div>
         <div class="flex items-center gap-4">
@@ -74,7 +74,7 @@
             target="_blank"
             rel="noopener noreferrer"
             class="text-sm font-medium text-slate-600 dark:text-gray-400 hover:text-turbowarp dark:hover:text-white transition-colors"
-            >TurboWarp</a
+            >TurboWarp.org</a
           >
           <a
             href="https://github.com/kx1bx1/"
@@ -90,10 +90,11 @@
     <main class="flex-grow max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 w-full">
       <div class="text-center mb-12">
         <h2 class="text-4xl md:text-5xl font-bold text-slate-900 dark:text-white mb-4 bg-clip-text">
-          Supercharge your Scratch projects
+          Do you like homebrew?
         </h2>
         <p class="text-lg text-slate-600 dark:text-gray-300 max-w-2xl mx-auto mb-8">
-          A collection of custom, high-performance extensions for TurboWarp.
+          This is a curated collection of custom extensions for TurboWarp, created by @kx1bx1.
+          Explore a variety of tools and functionalities to enhance your TurboWarp experience.
         </p>
 
         <div class="max-w-4xl mx-auto flex flex-col md:flex-row gap-4 relative z-10">
