fix: didn't update the footer...

--- a/src/index.html
+++ b/src/index.html
@@ -179,10 +179,10 @@
     >
       <div class="max-w-7xl mx-auto px-4 text-center">
         <p class="text-slate-500 dark:text-gray-500 text-sm">
-          &copy; 2024 TurboWarp Extension Gallery. Not affiliated with Scratch or the Scratch Team.
+          &copy; 2025 Not an Existing Copyright. Not affiliated with Scratch or the Scratch Team.
         </p>
         <p class="text-slate-400 dark:text-gray-600 text-xs mt-2">
-          Created with <i class="ph ph-heart-fill text-turbowarp mx-1"></i> for the community.
+          Created with love for the community.
         </p>
       </div>
     </footer>
